<?xml version="1.0"?>
<package format="2">
  <name>sonar_driver_interfaces</name>
  <version>0.1.0</version>
  <description>Package containing custom messages for the sonar_driver package</description>

  <maintainer email="schildknecht.bastian@gmail.com">bastian</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
 
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>